configmap.yml
apiVersion: v1
kind: Pod
metadata:
  name:  configmap-pod
spec:
  containers:
    - name: busybox
      resources:
        requests:
          cpu: 100m
          memory: 100Mi
        limits:
          cpu: 200m
          memory: 500Mi
      image: busybox
      command: ["bin/bash","-c","env"]
