deployment.yml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 5
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      restartPolicy: Always # Always, OnFailure,Never
      containers:
      - name: nginx-container
        image: nginx
        imagePullPolicy: IfNotPresent  #Always, ifnot present, naver
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 200m
            memory: 1Gi
        ports:
        - containerPort: 80
