pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  labels:
    app: webapp
spec:
  containers:
    - name: nginx-container
      image: nginx
      resources:
        requests:
          cpu: "100m"
          memory: "100Mi"
        limits:
          cpu: "200m"
          memory: "500Mi"
      ports:
        - containerPort: 80
    - name: ubuntu-container
      image: nginx
      resources:
        requests:
          cpu: 100m
          memory: 100M
        limits:
          cpu: 200m
          memory: 500M
      ports:
        - containerPort: 8081
