taints.yml
kubectl describe node <node-name>
---
#apply taints to node
kubectl taint nodes <node-name> key=value:<taint-effect>
---
kubectl taint node k8s-vmss00001 env=staging:NoSchedule
---
kubectl describe node k8s-vmss0001 | grep -i taint
---
apiVersion: v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 4
  selector:
    matchLables:
      app: myapp
  template:
    metadata:
      name: myapp-pod
      labels:
        app: myapp
    spec:
      contaienrs:
      - name: nginx-container
        image: nginx
      tolerations:
      - key: "env"
        operator: "Equal"
        value: "stag"
        effect: "NoSchedule"
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    env: stag
spec:
  contaienrs:
  - name: nginx
    image: nginx
    imagePullPolicy: IfNotPresent
  tolerations:
    - key: stag
      operator: "Exists"
      effect: "NoSchedule"
