hpa.yml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: php-apache
  labels:
    app: php
spec:
  replicas: 5
  selector:
    matchLabels:
      app: php-apache
  template:
    metadata:
      labels:
        app: php-apache
    spec:
      restartPolicy: Always #Always,OnFailure,Never
      containers:
      - name: php-apache
        image: apache.10.0
        imagePullPolicy: IfNotPresent  #Always, ifnot present, naver
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 200m
            memory: 100Mi
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: php-apache
  labels:
    run: php-apache
spec:
  ports:
    - port: 80
  selector:
    run: php-apache
