nodeport.yml
apiVersion: v1
kind: Service 
metadata:
  name: nodeport-service 
spec:
  type: NodePort
  ports: 
    - port: 80
      targetPort: 80
      nodePort: 30001
      protocol: TCP
  selector:
    app: nginx-deployment
