statefullsets.yml
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: redis
spec:
  ports:
  - port: 6379
    protocol: TCP
  selector:
    app: redis
  type: ClusterIP
  clusterIP: None
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
spec:
  selector:
    matchLabels:
      app: redis # has to match .spec.template.metadata.labels
  serviceName: "redis"
  replicas: 4 # by default is 1
  template:
    metadata:
      labels:
        app: redis   # has to match .spec.selector.matchLabels
    spec:
      restartPolicy: Always
      containers:
      - name: redis
        image: redis:5.0.4
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 6379
        volumeMounts:
        - name: redis-aof
          mountPath: /data
  VolumeClaimTemplates:
  - metadata:
      name: redis-aof
    spec:
      accessModes:
      - ReadWriteMany
      storageClassName: "gp2"
      resources:
        requests:
          storage: 1Gi
